--- a/static/css/styleLogin.css
+++ b/static/css/styleLogin.css
@@ -20,10 +20,10 @@
     box-sizing: border-box;
     font-weight:1000;
 }  
-.menu a:hover{
+.direcciones:hover{
     background-color:#fffeff;
     color: #906c54;
-	  cursor: pointer;
+	cursor: pointer;
 }
 .menu a.active{
     float: left;
@@ -33,6 +33,15 @@
     position: relative;
     left: 15px;
     font-weight:1000
+}   
+.menu a.user{
+    float: left;
+    color: #fffeff;
+    padding: 20px 50px;
+    position: relative;
+    left: 15px;
+    font-weight:1000;
+    margin:0 10px
 }   
 
 .caprincho {
@@ -48,6 +57,8 @@ body {
 	text-align: center;
 	padding-top: 0pc;
 }
+
+
 .grid_container{
 	display:grid;
 	max-width: 50%;
