--- a/template/play/niveles.html
+++ b/template/play/niveles.html
@@ -14,8 +14,9 @@
         <nav class="menu">
             <a href="/logout_vista/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
             <a href="#" class="user">Hola {{user}} !!!</a>
-            <a href="/tablero/" class="">Ranking</a>
-            <a href="/logout_vista/" class="">Cerrar Sesion</a>
+            <a href="/tablero/" class="direcciones">Ranking</a>
+            <a href="/estadisticas/" class="direcciones">Estadisticas</a>
+            <a href="/logout_vista/" class="direcciones">Cerrar Sesion</a>
         </nav>
     </header>
     <div class="main">
