--- a/static/css/styleReglas.css
+++ b/static/css/styleReglas.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 *{
 	margin:0;
     margin-top:0;
@@ -56,6 +57,8 @@ body {
 	text-align: center;
 	padding-top: 0pc;
 }
+
+
 .regla{
   margin:auto;
 	border: #767676 solid 2px;
@@ -124,4 +127,30 @@ ul.bullets{
 
 #col1 {
   float: left;
+}
+.grid_container a{
+	grid-column: 1/3;
+	width: 50%;
+	margin: 10px auto;
+	text-decoration:none
+}
+button {
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	background: #906c54;
+	color:#fffeff;
+	width: -webkit-fill-available;
+	border: 0;
+	padding: 15px;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+	display:block;
+	margin:auto;
+}
+button:hover{
+	background: #c4b399;
+	color: #f2f2f2;
 }
