--- a/template/inicio.html
+++ b/template/inicio.html
@@ -13,8 +13,8 @@
     <header>
         <nav class="menu">
             <a href="/logout_vista/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
-            <a href="/tablero/" class="">Ranking</a>
-            <a href="{% url 'login' %}" class="">Iniciar Sesion</a>
+            <a href="/tablero/" class="direcciones">Ranking</a>
+            <a href="{% url 'login' %}" class="direcciones">Iniciar Sesion</a>
         </nav>
     </header>
     <div class="grid_container">
