--- a/template/play/reglasJuego.html
+++ b/template/play/reglasJuego.html
@@ -14,8 +14,8 @@
     <nav class="menu">
       <a href="/logout_vista/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
       <a href="#" class="user">Hola {{user}} !!!</a>
-      <a href="/tablero/" class="">Ranking</a>
-      <a href="/logout_vista/" class="">Cerrar Sesion</a>
+      <a href="/tablero/" class="direcciones">Ranking</a>
+      <a href="/logout_vista/" class="direcciones">Cerrar Sesion</a>
   </nav>
   </header>  
     <div class="fondo_reglas">
@@ -44,6 +44,11 @@
           <h1>Acerca del Proyecto</h1>
           <p>Este juego fue desarrollado por el grupo nro 5 como parte del programa del Gobierno del Chaco, llamado Informatorio.</p>
         </section>
+        <a href="/niveles/"> 
+          <button id="start" class="btn-success">             
+            Volver  
+          </button>
+        </a>
       </div>
     </div>
 </body>
