--- a/static/css/styleEstadistica.css
+++ b/static/css/styleEstadistica.css
@@ -61,9 +61,10 @@ body {
 .row{
     background-color: #8b0000;
     position: absolute;
-    margin:auto;
+    margin:50%;
     width: 100%;
     height: 100%;
+	padding-top:20%;
 }
 .estadistica{
 	display:grid;
