--- a/template/inicio.html
+++ b/template/inicio.html
@@ -12,10 +12,9 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="/inicio/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
-            <a href="/tablero/" class="">Ranking</a>
-            <a href="#" class="">Logout</a>
-            <a href="{% url 'login' %}" class="">Login</a>
+            <a href="/logout_vista/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+            <a href="/tablero/" class="direcciones">Ranking</a>
+            <a href="{% url 'login' %}" class="direcciones">Iniciar Sesion</a>
         </nav>
     </header>
     <div class="grid_container">
